
Version 2.0-3

o Fixed bug in all effect() methods that caused error when na.action="na.exclude" (reported by Tracy Lightcap and Rob Goedman).

Version 2.0-4

o Palettes from the colorspace package are used by default for stacked plots.

o Fixed bug in handling of typical= argument to effect() (argument was effectively ignored).

o Added Titanic and Wells data sets.

o Small changes.

Version 2.0-5

o Added examples for Titanic, BEPS, and WVS data sets.

o Arguments ... (e.g., digits) passed through in print() methods.

Version 2.0-6

o Fixed small bugs in print.efflist(), summary.efflist(), and plot.effpoly() methods.

o Corrected error in missing-data handling that sometimes surfaced in effect.multinom().

o Added .Rd file for package.

Version 2.0-7

o Fixed bug in handling of given.values argument to effect().

Version 2.0-8

o The S3 method print.summary.eff is now declared in NAMESPACE (as it should have been all along).

o Added CITATION.txt file (courtesy of Achim Zeileis).

o Version corresponding to John Fox, Jangman Hong (2009), Effect Displays in R for Multinomial and Proportional-Odds Logit Models: Extensions to the effects Package. Journal of Statistical Software, 32(1), 1-24 <http://www.jstatsoft.org/v32/i01/>.

O Fixed [pgk] markup in .Rd file cross-references.

Version 2.0-9

o Applied patches contributed by Ian Fellows to allow logical predictors and various coercions in model formulas to work properly.

o Fixed name of CITATION file (was CITATION.txt).

o Small changes to docs.

Version 2.0-10

o Backed out Ian Fellows's patches because of errors.

Version 2.0-11

o Small change to eliminate warnings produced in R 2.12.0.

o Added nrows and ncols argument to plot.efflist() (following suggstion by Michael Friendly).

o Small fix to docs.

Version 2.0-12

o plot.eff() now returns an object, printed by print.plot.eff() (after a question by Michael Friendly).