@@ -1,8 +1,9 @@
-# last modified 19 December 2010 by J. Fox
+# last modified 28 December 2010 by J. Fox
 
 import(grid, lattice)
 export(effect, allEffects, all.effects)
 S3method(effect, lm)
+S3method(effect, gls)
 S3method(effect, multinom)
 S3method(effect, polr)
 S3method(print, eff)
